[gd_scene load_steps=6 format=2]

[ext_resource path="res://GodetteVN/Core/VNUIBoxes/defaultDialogBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://GodetteVN/Core/VNUIBoxes/defaultNameBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://GodetteVN/Core/_Details/choiceContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://GodetteVN/Core/QuickMenu/quickMenuLayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://GodetteVN/Core/VNUI.gd" type="Script" id=6]

[node name="VNUI" type="CanvasLayer"]
layer = 3
script = ExtResource( 6 )

[node name="dialogBox" parent="." instance=ExtResource( 1 )]
margin_left = 412.0
margin_top = 832.0
margin_bottom = 1000.0

[node name="nameBox" parent="." instance=ExtResource( 2 )]

[node name="choiceContainer" parent="." instance=ExtResource( 4 )]
visible = false

[node name="quickMenu" parent="." instance=ExtResource( 5 )]
